// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cognite multi error create with 2 fails and 1 success 1`] = `
"The API Failed to process some items
{
  \\"succeded\\": [
    [
      2
    ]
  ],
  \\"responses\\": [],
  \\"failed\\": [
    [
      0,
      1
    ]
  ],
  \\"errors\\": [
    {
      \\"status\\": 400,
      \\"message\\": \\"createAssets.arg0.items: size must be between 1 and 1000\\",
      \\"requestId\\": \\"r1\\",
      \\"missing\\": [
        \\"something\\"
      ]
    },
    {
      \\"status\\": 500,
      \\"message\\": \\"createAssets.arg0.items: size must be between 1 and 1000\\",
      \\"requestId\\": \\"r2\\",
      \\"missing\\": [
        \\"more\\"
      ],
      \\"duplicated\\": [
        \\"this one\\"
      ]
    }
  ]
}"
`;

exports[`CogniteError extra field 1`] = `
"Abc | code: 500
{
  \\"missing\\": [
    {
      \\"id\\": 4190022127342195
    },
    {
      \\"externalId\\": \\"abc\\"
    }
  ],
  \\"duplicated\\": [
    {
      \\"externalId\\": \\"string\\",
      \\"startTime\\": 0,
      \\"endTime\\": 0,
      \\"description\\": \\"string\\",
      \\"source\\": \\"string\\"
    }
  ]
}"
`;

exports[`handleErrorResponse extra fields 1`] = `
"abc | code: 500 | X-Request-ID: def
{
  \\"missing\\": [
    {
      \\"id\\": 4190022127342195
    },
    {
      \\"externalId\\": \\"abc\\"
    }
  ],
  \\"duplicated\\": [
    {
      \\"externalId\\": \\"string\\",
      \\"startTime\\": 0,
      \\"endTime\\": 0,
      \\"description\\": \\"string\\",
      \\"source\\": \\"string\\"
    }
  ]
}"
`;
